# gitignorio-cli

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  release.yml
scripts/: download_templates.py
src/gitignore_cli/: __init__.py  cli.py  deps.py  detect.py  file.py  global_gitignore.py  hooks.py  ignored_dirs.py  mapping.py  templates.py
src/gitignore_cli/data/: manifest.json  order.json
src/gitignore_cli/data/templates/: lamp.gitignore  reactnative.gitignore  twincat3.gitignore
tests/: test_update.py
