[project]
name = "gitignore-cli"
version = "0.1.0"
description = "Create and update .gitignore files using gitignore.io with automatic language detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
gitignore = "gitignore_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitignore_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/gitignore_cli/data" = "gitignore_cli/data"

[tool.hatch.build.targets.sdist]
include = ["src/gitignore_cli", "pyproject.toml", "README.md", "scripts/download_templates.py"]
